--- a/index.html
+++ b/index.html
@@ -22,21 +22,46 @@
 				<div class="col-3">
 					<div class="logo">
 						<a href="">
-							<img src="/lesson9/images/logo (2).png" alt="">
+							<img src="./images/logo.png" alt="logo">
 						</a>
 					</div>
 				</div>
 				<div class="col-6"> 
 					<nav>
 						<ul class="menu">
-							<li><a href="">Home </a></li>
-							<li><a href="">Products</a></li>
+							<li><a href="">Home</a></li>
+							<li><a href="">Products <p class="arrow"></p></a>	
+								
+								<ul class="submenu">
+									<li><a href="">Lorem ipsum dolor</a></li>
+									<li><a href="">Sit amet</a></li>
+									<li><a href="">Consectetur adipisicing</a></li>
+									<li><a href="">Tempor incididunt</a></li>
+									<li><a href="">Dolore magna aliqua</a></li>
+									<li><a href="">Ut enim ad minim veniam</a></li>
+									<li><a href="">Quis nostrud</a></li>
+									</a>								
+								</ul>							
+							</li>
 							<li><a href="">Payment</a></li>
 							<li><a href="">Shipping</a></li>
 						</ul>
 					</nav>
 				</div>
-				<div class="col-3">search</div>
+				<div class="col-3">
+					<div class="row">
+						<div class="col-9">
+							<form>							
+							<input class="search-input"  type="text" placeholder="search"/>
+							<button type="button" class="search-button"></button>	</form>						
+						</div>
+						<div class="col-3">
+							<form>
+								<button type="button" class="basket-button"></button>
+							</form>													
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</header>
